package gptui.ui.viewmodel.answer;

public interface AnswerVmMediator {
    void displayCurrentAnswer();

    void initialize();
}
