package gptui.ui.viewmodel.ui;

public interface GptUiVmController {
    void initialize();
}
